# spec_to_symbol

./: .gitignore  README.md  pyproject.toml  requirements.txt
spec_to_symbol/: component.py  fuzzy.py  kicad_symbol.py  library_manager.py  logger.py  main.py  sexp_parser.py
spec_to_symbol/tui/: completer.py  terminal.py  tui.py
symbol_templates/: Device.kicad_sym  Template_Device.kicad_sym
