[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-to-symbol"
version = "0.1.0"
description = "A TUI for creating KiCad symbols for passive components."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "rapidfuzz",
]

[project.scripts]
spec-to-symbol = "spec_to_symbol.main:main"
